[package]
name = "vectorx"
version = "0.1.0"
edition = "2021"

[lib]
path = "circuits/lib.rs"

[[bin]]
name = "dummy_step"
path = "bin/dummy_step.rs"

[[bin]]
name = "dummy_rotate"
path = "bin/dummy_rotate.rs"

[[bin]]
name = "step"
path = "bin/step.rs"

[[bin]]
name = "rotate"
path = "bin/rotate.rs"

[[bin]]
name = "vectorx"
path = "bin/vectorx.rs"

[[bin]]
name = "genesis"
path = "bin/genesis.rs"

[[bin]]
name = "indexer"
path = "bin/indexer.rs"

[[bin]]
name = "events"
path = "bin/events.rs"

[features]
ci = []

[dependencies]
env_logger = { version = "0.9.0", default-features = false }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
itertools = "0.10.5"
ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
log = { version = "0.4.14", default-features = false }
num = { version = "0.4", features = ["rand"] }
rustx = { git = "https://github.com/succinctlabs/succinctx.git" }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", branch = "ratan/fix-get-fixed-subarray-2" }
succinct-client = { git = "https://github.com/succinctlabs/succinctx.git" }
plonky2x-derive = { git = "https://github.com/succinctlabs/succinctx.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.2.0", features = ["full"] }
async-trait = "0.1.73"
reqwest = "0.11.20"
ethers = { version = "2.0.10", features = ["ws"] }
sha256 = "1.4.0"
primitive-types = "0.12.1"

redis = { version = "0.23.3", features = [
    "tokio-native-tls-comp",
    "json",
    "tokio-comp",
] }

dotenv = "0.15.0"
avail-subxt = { git = "https://github.com/availproject/avail.git", rev = "e976c56" }
subxt = { version = "0.29" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
alloy-sol-types = "0.4.2"
alloy-primitives = "0.4.2"
anyhow = "1.0.68"
clap = "4.4.9"
rs_merkle = "1.4.1"
[dev-dependencies]
anyhow = "1.0.68"

# Dependency `subxt` uses it's own 'version' of sp-core so we need to patch it :)
[patch.crates-io]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core-hashing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
