[package]
name = "succinct_avail_circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
curta = { git = "https://github.com/succinctlabs/curta.git" }
env_logger = { version = "0.9.0", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
itertools = "0.10.5"
ff = {package="ff" , version="0.13", features = ["derive"]}
lazy_static = "1.4.0"
log = { version = "0.4.14", default-features = false }
num = { version = "0.4", features = [ "rand" ] }
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git" }
plonky2x = { git = "https://github.com/succinctlabs/sdk.git" }
rand = "0.4"
serde = {version = "1", features= ["derive"]}
serde_json = "1.0.86"
tokio = { version = "1.2.0", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }

[dev-dependencies]
anyhow = "1.0.68"