[package]
name = "avail"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "step"
path = "bin/step.rs"

[features]
ci = []

[dependencies]
env_logger = { version = "0.9.0", default-features = false }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
itertools = "0.10.5"
ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
log = { version = "0.4.14", default-features = false }
num = { version = "0.4", features = ["rand"] }
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git" }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }
plonky2x-derive = { git = "https://github.com/succinctlabs/succinctx.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.2.0", features = ["full"] }
async-trait = "0.1.73"
reqwest = "0.11.20"
ethers = "2.0.10"
sha256 = "1.4.0"
primitive-types = "0.12.1"

avail-subxt = { git = "https://github.com/availproject/avail.git" }
sp-core = { version = "21.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
sha2 = "0.10.8"
dotenv = "0.15.0"

[dev-dependencies]
anyhow = "1.0.68"
