[package]
name = "succinct_avail_offchain_actors"
version = "0.1.0"
edition = "2021"


### Dependencies

[dependencies]
anyhow = "1.0"
base58 = { version = "0.2.0" }
clap = { version = "3.0.0-rc.9", features = ["derive"] }
futures = "0.3"
hex = "0.4.3"
env_logger = { version = "0.9.0", default-features = false }
log = { version = "0.4.14", default-features = false }
num = { version = "0.4", features = [ "rand" ] }
serde = { version = "1", features= ["derive"] }
serde_json = "1.0.86"
tarpc = { version = "0.33", features = ["full"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

# Avail/Substrate dependencies
avail-subxt = {git = "https://github.com/availproject/avail.git", rev = "b68af9607e3d0db972eb54b1ccea70223584cfe9"}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
pallet-grandpa = "21.0.0"
sp-core = { version = "16.0.0", default-features = false }
sp-state-machine = "0.12.0"
subxt = "0.27"

# Avail circuits
succinct_avail_proof_generators = { path = "../circuits" }
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git" }
plonky2_field = "0.1.0"
plonky2lib_succinct = { git = "ssh://git@github.com/succinctlabs/plonky2lib.git" }


### Binaries

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "operator"
path = "src/operator.rs"

[[bin]]
name = "proof_generator_rpc"
path = "src/proof_generator_rpc.rs"