[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dummy_step"
path = "dummy_step.rs"

[[bin]]
name = "dummy_rotate"
path = "dummy_rotate.rs"

[[bin]]
name = "step"
path = "step.rs"

[[bin]]
name = "rotate"
path = "rotate.rs"

[[bin]]
name = "vectorx"
path = "vectorx.rs"

[[bin]]
name = "genesis"
path = "genesis.rs"

[[bin]]
name = "indexer"
path = "indexer.rs"

[[bin]]
name = "events"
path = "events.rs"

[[bin]]
name = "fill_block_range"
path = "fill_block_range.rs"

[dependencies]
rustx = { git = "https://github.com/succinctlabs/succinctx.git" }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }
succinct-client = { git = "https://github.com/succinctlabs/succinctx.git" }
circuits = { path = "../circuits" }
ethers = "2.0.13"
log = "0.4.20"
tokio = "1.36.0"
dotenv = "0.15.0"
env_logger = "0.11.2"
alloy-sol-types = "0.4.2"
alloy-primitives = "0.4.2"
avail-subxt = { git = "https://github.com/availproject/avail.git", rev = "e976c56" }
subxt = { version = "0.29" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
clap = "4.5.0"
hex = "0.4.3"
anyhow = "1.0.79"
