[package]
name = "succinct_avail_offchain_actors"
version = "0.1.0"
edition = "2021"


### Dependencies

[dependencies]
enum_extract = "0.1.1"
hex = "0.4.3"
serde = {version = "1", features= ["derive"]}
serde_json = "1.0.86"
thiserror = "1.0"
tokio = { version = "1.2.0", features = ["full"] }

# Avail/Substrate dependencies
avail-subxt = {git = "https://github.com/availproject/avail.git", rev = "1f9ba05"}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
itertools = "0.8"
sp-state-machine = "0.12.0"
subxt = "0.24"


### Binaries

[[bin]]
name = "get_events"
path = "src/get_events.rs"

[[bin]]
name = "get_authority_setid"
path = "src/get_authority_setid.rs"

[[bin]]
name = "get_justification"
path = "src/get_justification.rs"

[[bin]]
name = "get_header"
path = "src/get_header.rs"

[[bin]]
name = "subscribe_justifications"
path = "src/subscribe_justifications.rs"

[[bin]]
name = "gen_avail_event_types"
path = "src/gen_avail_event_types.rs"