[package]
name = "succinct_avail_offchain_actors"
version = "0.1.0"
edition = "2021"


### Dependencies

[dependencies]
anyhow = "1.0"
futures = "0.3"
hex = "0.4.3"
num = { version = "0.4", features = [ "rand" ] }
serde = { version = "1", features= ["derive"] }
tarpc = { version = "0.33", features = ["full"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

# Avail/Substrate dependencies
avail-subxt = {git = "https://github.com/availproject/avail.git", rev = "1f9ba05"}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
sp-state-machine = "0.12.0"
subxt = "0.24"

# Avail circuits
succinct_avail_proof_generators = { path = "../circuits" }
plonky2 = { path = "../../../plonky2lib/plonky2" }
plonky2_field = { path = "../../../plonky2lib/field" }
ed25519 = { path = "../../../plonky2lib/ed25519" }



### Binaries

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "header_proof_generator"
path = "src/header_proof_generator.rs"

[[bin]]
name = "grandpa_justif_proof_generator"
path = "src/grandpa_justif_proof_generator.rs"

[[bin]]
name = "proof_generator_rpc"
path = "src/proof_generator_rpc.rs"